--- a/src/components/Portfolio/Portfolio.scss
+++ b/src/components/Portfolio/Portfolio.scss
@@ -16,16 +16,16 @@
         display: flex;
         gap: 15px;
         flex-wrap: wrap;
-        padding-bottom: 100px;
+        padding: 0px 150px 100px;
     }
 
     .image-box {
         position: relative;
-        flex: 1 1 20%;
-        height: 400px;
+        flex: 1 1 100%;
+        height: 450px;
         overflow: hidden;
         border-radius: 10px;
-        max-width: calc(25% - 10px);
+        max-width: calc(33% - 10px);
 
         .portfolio-image {
             position: absolute;
