--- a/src/components/AnimatedLetters/AnimatedLetters.scss
+++ b/src/components/AnimatedLetters/AnimatedLetters.scss
@@ -19,8 +19,14 @@
   }
 }
 
+//displays each character individually
 @for $i from 1 through 35 {
   .text-animate._#{$i} {
     animation-delay: #{$i / 10}s;
   }
+}
+
+.bouncing {
+    animation: rubberBand 1s;
+    color: #ffd700;
 }
