--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -82,6 +82,7 @@
     color: #fff;
     font-family: sans-serif;
     font-weight: 300;
+    max-width: -moz-fit-content;
     max-width: fit-content;
     animation: pulse 1s;
     &:nth-of-type(1) {
