--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -87,7 +87,8 @@
     color: #fff;
     font-family: sans-serif;
     font-weight: 300;
-    min-width: fit-content;
+    min-width: auto;
+    
 
     &:before {
       content: '<p>';
