--- a/src/components/Portfolio/Portfolio.scss
+++ b/src/components/Portfolio/Portfolio.scss
@@ -7,22 +7,22 @@
     overflow: auto;
 
     h1.page-title {
-        margin-left: 100px;
-        margin-top: 150px;
-        margin-bottom: 75px;
+        margin-left: 60px;
+        margin-top: 105px;
+        margin-bottom: 25px;
     }
 
     .images-container {
         display: flex;
         gap: 15px;
         flex-wrap: wrap;
-        padding: 0px 150px 100px;
+        padding: 0px 150px;
     }
 
     .image-box {
         position: relative;
         flex: 1 1 100%;
-        height: 450px;
+        height: 300px;
         overflow: hidden;
         border-radius: 10px;
         max-width: calc(33% - 10px);
