--- a/src/components/Portfolio/Portfolio.scss
+++ b/src/components/Portfolio/Portfolio.scss
@@ -31,7 +31,7 @@
             position: absolute;
             z-index: 2;
             width: 100%;
-            height: 100%;
+            // height: 100%;
             object-fit: cover;
         }
 
