--- a/src/components/Portfolio/Portfolio.scss
+++ b/src/components/Portfolio/Portfolio.scss
@@ -52,9 +52,9 @@
         .title {
             margin-bottom: 0;
             margin-top: 0;
-            color: #fff;
+            color: #ffd700;
             font-size: 24px;
-            font-weight: 500;
+            font-weight: 600;
             line-height: 24px;
         }
 
@@ -63,7 +63,7 @@
             margin-bottom: 5px;
             margin-right: 35px;
             color: #fff;
-            font-weight: 700;
+            font-weight: 600;
         }
 
         .btn {
