--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -56,8 +56,7 @@
     position: relative;
     margin-bottom: 25px;
     left: 0px;
-    animation: fadeIn 1s forwards;
-    animation-delay: 1s;
+    animation: fadeIn 1s linear 1 backwards;
 
     &::before {
       content: '<h1>';
@@ -88,7 +87,7 @@
     font-family: sans-serif;
     font-weight: 300;
     min-width: auto;
-    
+    animation: fadeIn 1.5s linear backwards;
 
     &:before {
       content: '<p>';
@@ -98,7 +97,7 @@
       position: absolute;
       margin-top: -20px;
       left: -20px;
-      opacity: 0.6;
+      animation: fadeIn 1.5s linear backwards;
     }
   
     &:after {
@@ -109,20 +108,24 @@
       position: absolute;
       margin-top: 0px;
       margin-left: -20px;
-      animation: fadeIn 1s 1.7s backwards;
-      opacity: 0.6;
+      animation: fadeIn 1.5s linear backwards;
     }
 
     &:nth-of-type(1){
-        animation-delay: 1.1s;
+        animation-delay: 1.75s;
     }
 
     &:nth-of-type(2){
-        animation-delay: 1.2s;
+        animation-delay: 1.85s;
     }
+  }
 
-    &:nth-of-type(3){
-        animation-delay: 1.3s;
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
     }
   }
 
