--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -142,6 +142,11 @@
   }
 }
 
+.hamburger-icon,
+.close-icon {
+  display: none;
+}
+
 @media screen and (max-width: 1200px) {
   .nav-bar {
     background: transparent;
@@ -155,7 +160,6 @@
     }
 
     nav {
-      display: block;
       width: 100%;
       height: 100%;
       background: #181818;
@@ -181,6 +185,18 @@
       a svg {
         opacity: 1 !important;
       }
+
+      &.mobile-show {
+        display: block;
+      }
+    }
+
+    .hamburger-icon,
+    .close-icon {
+      display: block;
+      position: absolute;
+      top: 15px;
+      right: 15px;
     }
   }
 }
