--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -135,3 +135,14 @@
     }
   }
 }
+
+@media screen and (max-width: 1200px) {
+  .tagcloud {
+    display: none;
+    // position: initial;
+    // width: 100%;
+    // height: 0%;
+    // overflow: visible;
+    // margin: 0px;
+  }
+}
