--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -176,6 +176,7 @@
     h1 {
       font-size: 50px;
       line-height: 60px;
+      margin-top: 40px;
   
       img {
         margin-left: 20px;
