--- a/src/components/Portfolio/Portfolio.scss
+++ b/src/components/Portfolio/Portfolio.scss
@@ -4,7 +4,7 @@
   width: calc(100% - 150px);
   position: initial;
   height: 100%;
-  overflow: hidden;
+  overflow: auto;
 
   h1.page-title {
     margin-left: 60px;
@@ -161,7 +161,8 @@
 
     h1.page-title {
       margin-left: 20px;
-      margin-top: 20px;
+      margin-top:-20px;
+      font-size: 60px;
     }
 
     .image-box {
