--- a/src/components/Portfolio/Portfolio.scss
+++ b/src/components/Portfolio/Portfolio.scss
@@ -159,6 +159,26 @@
     padding: 20px;
     box-sizing: border-box;
 
+    .images-container {
+      display: flex;
+      gap: 15px;
+      flex-wrap: wrap;
+      padding: 0px 0px;
+    }
+
+    .title {
+      margin-left: -10px;
+      color: #ffd700;
+      font-size: 22px;
+      width: 100%;
+    }
+
+    .description {
+      font-size: 11px;
+      margin-left: -10px;
+      font-weight: 100;
+    }
+
     h1.page-title {
       margin-left: 20px;
       margin-top:-20px;
