Modify title placements on mobile

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -199,9 +199,9 @@
 
     .logo-container {
       position: relative;
-      width: 150px;
+      width: 50%;
       height: auto;
-      top: 50px;
+      top: 30px;
       right: 0px;
       box-sizing: border-box;
       margin: auto;
