Modify title placements on mobile

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -241,6 +241,11 @@ p {
 
   .text-zone {
     margin-top: -80px;
+
+    h1 {
+      padding-left: 10px;
+      font-size: 60px;
+    }
   }
 
   .contact-form {
