--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -226,7 +226,7 @@ p {
   span {
     font-size: 16px;
 
-    span { 
+    span {
       color: #ffd700;
     }
   }
@@ -239,15 +239,17 @@ p {
     display: none;
   }
 
-  .text-zone {
-    margin-top: -80px;
+  .contact-page {
+    .text-zone {
+      margin-top: -80px;
 
-    h1 {
-      padding-left: 10px;
-      font-size: 60px;
+      h1 {
+        padding-left: 10px;
+        font-size: 60px;
+      }
     }
   }
- 
+
   .contact-form {
     margin-top: -30px;
   }
