--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -180,6 +180,7 @@
         position: initial;
         width: auto;
         margin-left: 10px;
+        font-size: 15px;
       }
 
       a svg {
