--- a/src/components/SkillsBall/SkillsBall.scss
+++ b/src/components/SkillsBall/SkillsBall.scss
@@ -3,14 +3,15 @@
 .tagcloud {
   display: inline-block;
   margin-top: 50px;
-  margin-left: 52%;
+  margin-left: 50%;
   font-weight: bold;
   letter-spacing: 2px;
   font-family: 'Bebas Neue', cursive;
   font-size: 30px;
   color: #ffc300;
+  // width: 10%;
 }
 
 .tagcloud--item:hover {
   color: white;
-}
+} 
