--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -150,11 +150,11 @@
   }
   
   .tagcloud {
-    // display: none;
-    position: initial;
-    width: 100%;
-    height: 0%;
-    overflow: visible;
-    margin: 0px;
+    display: none;
+    // position: initial;
+    // width: 100%;
+    // height: 0%;
+    // overflow: visible;
+    // margin: 0px;
   }
 }
